# thohago-branding

./: .env.example  .gitignore  Runbook.md  index.html  package.json  pnpm-lock.yaml  pyproject.toml
config/: shops.example.json
docs/: blog_story_map_schema.md  desktop_phase10_contract.md  desktop_phase10_verification.md  desktop_phase1_contract.md  desktop_phase1_verification.md  desktop_phase2_contract.md  desktop_phase2_verification.md  desktop_phase3_contract.md  desktop_phase3_verification.md  desktop_phase4_contract.md  desktop_phase4_verification.md  desktop_phase5_contract.md  desktop_phase5_verification.md  desktop_phase6_contract.md  desktop_phase6_verification.md  desktop_phase7_contract.md  desktop_phase7_verification.md  desktop_phase8_contract.md  desktop_phase8_verification.md  desktop_phase9_contract.md  desktop_phase9_verification.md  development_plan.md  electron_app_spec.md  gcp_https_sslip_contract.md  gcp_https_sslip_verification.md  gcp_mvp_deploy_contract.md  gcp_mvp_deploy_verification.md  generate_kmong_detail.py  generate_kmong_thumbnail.py  kmong_service_draft.md  mobile_saas_architecture.md  mobile_v1_frontend_development_plan.md  mobile_v1_phase1_contract.md  mobile_v1_phase1_verification.md  mobile_v1_phase2_contract.md  mobile_v1_phase2_verification.md  mobile_v1_phase3_contract.md  mobile_v1_phase3_verification.md  mobile_v1_phase4_contract.md  mobile_v1_phase4_verification.md  (+44 more)
scripts/: start_live_bot.ps1
sidecar/: __init__.py  dispatcher.py  server.py
tests/: test_blog_composer.py  test_mobile_v1_phase1.py  test_mobile_v1_phase2.py  (+18 more)
(+190 files in other folders)
