[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "thohago-phase1"
version = "0.1.0"
description = "Phase 1 replayable pipeline for the Thohago content engine"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1",
    "jinja2>=3.1,<4",
    "httpx>=0.28,<1",
    "python-multipart>=0.0.20,<1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

